keruta/keruta-admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keruta-admin
  labels:
    app: keruta-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keruta-admin
  template:
    metadata:
      name: keruta-admin
      labels:
        app: keruta-admin
    spec:
      containers:
        - name: keruta-admin
          image: harbor.kigawa.net/library/keruta-admin:main-e705d5d67de9e498a426ec0b085964925014d5ae
          imagePullPolicy: IfNotPresent
          startupProbe:
            httpGet:
              port: 3000
              path: /
          livenessProbe:
            httpGet:
              path: /
              port: 3000
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
