keruta/keruta-executor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keruta-executor
  labels:
    app: keruta-executor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keruta-executor
  template:
    metadata:
      name: keruta-executor
      labels:
        app: keruta-executor
    spec:
      serviceAccountName: keruta-sa
      containers:
        - name: keruta-executor
          image: harbor.kigawa.net/library/keruta-executor:main-ef9ce96b5ff20dff8c8a15278fa1b19378732664
          imagePullPolicy: IfNotPresent
          startupProbe:
            httpGet:
              port: 8080
              path: /actuator/health
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
