keruta/keruta-executor-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: keruta-executor-svc
spec:
  selector:
    app: keruta-executor
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
