keruta/keruta-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: keruta
  labels:
    app: keruta
spec:
  selector:
    app: keruta
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
