keruta/ingress.yaml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keruta-ingress
spec:
  ingressClassName: haproxy
  rules:
    - host: keruta-api.kigawa.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keruta-svc
                port:
                  number: 8080
    - host: keruta.kigawa.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keruta-admin-svc
                port:
                  number: 3000
